add link Github for Rafael Lang

--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
         </article>
     </main>
 
-    <footer>Site criado por Gustavo Guanabara e reproduzido por Rafael Lang para o <a href="https://youtube.com.br/cursoemvideo" target="_blank">CursoemVideo</a>.</footer>
+    <footer>Site criado por Gustavo Guanabara e reproduzido por <a href="https://github.com/rafaellang1">Rafael Lang</a> para o <a href="https://youtube.com.br/cursoemvideo" target="_blank">CursoemVideo</a>.</footer>
 </body>
 </html>
